# prb-project-bearing-only-slam

./: CMakeLists.txt  README.md
data/: mini_ground_truth.g2o  mini_initial_guess.g2o
executables/: CMakeLists.txt  bearing_only_slam.cpp
framework/: definitions.hpp  observation.cpp  observation.hpp  state.cpp  state.hpp
slam/: solver.cpp  solver.hpp  solver_jacobians.cpp  triangulation.cpp  triangulation.hpp
tests/: CMakeLists.txt  first_drawing_test.cpp  observation_test.cpp  plot_g2o.cpp  plot_g2o_v2.cpp  solver_stuff.cpp  state_test.cpp  testone.cpp  testone_ig.cpp  triangulation_test.cpp
utils/: draw_utils.cpp  draw_utils.hpp  g2o_utils.cpp  g2o_utils.hpp
